src/frontend/src/pages/RecordingPage.scss
@use 'sass:map';
@use '../styles/cunningham-tokens-sass' as *;

$tablet: map.get($themes, 'default', 'globals', 'breakpoints', 'lg');
$mobile: map.get($themes, 'default', 'globals', 'breakpoints', 'xs');

.recording-page {
  display: flex;
  flex-direction: column;
  gap: 16px;
  padding-left: 1rem;
  padding-right: 1rem;

  @media (max-width: $tablet) {
  }

  &__not-found {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 4rem;
    height: 100%;
  }

  &__actions-buttons {
    display: flex;
    align-items: center;
    justify-content: space-between;

    &__right {
      display: flex;
      gap: 1rem;
      align-items: center;
    }
  }

  &__title {
    margin-top: 1.5rem;
    font-size: 18px;
    line-height: 24px;
  }

  &__metadata {
    width: 100%;
    table-layout: fixed;
    border-collapse: collapse;
    border-spacing: 1px;
    background: white; // border color between cells
    border-radius: var(--c--globals--spacings--xxs);
    overflow: hidden;

    @media (max-width: $mobile) {
      tr {
        display: flex;
        flex-direction: column;
      }
    }

    &__item {
      background: #f3f4f6;
      padding: var(--c--globals--spacings--xs);
      padding-top: var(--c--globals--spacings--xxs);
      padding-bottom: var(--c--globals--spacings--xxs);
      white-space: nowrap;
      text-align: center;
      color: #4b5563;
      display: flex;
      align-items: center;
      justify-content: center;
      gap: 0.5rem;
      line-height: 100%;
      font-size: 13px;

      &__icon {
        width: 16px;
        height: 16px;
      }
    }
  }
}

